2018-02-13  Petasis George  <petasis@iit.demokritos.gr>
	configure.ac: "${TEA_PLATFORM}" = "windows" fails under MINGW64.
	Added a check for TEA_PLATFORM to include also MINGW64
	(windows|*MINGW64_*).

	* library/tkdnd_compat.tcl: Fixed a bug in compat::bindsource2,
	suggested by segalion: https://github.com/petasis/tkdnd/issues/13
	(The bug was that compat::bindsource2 called
	::tkdnd::drag_source register with event 2.)

2018-02-13  Petasis George  <petasis@iit.demokritos.gr>
	* configure:
	* configure.ac:
	* configure.in:
	* tclconfig/tcl.m4: Updated to latest TEA.

	* macosx/macdnd.m:
	* unix/TkDND_XDND.c: Tcl 9.0 seems to not define any more "CONST", thus
	add this definition if it is missing (defined to "const").

2018-01-16  Petasis George  <petasis@iit.demokritos.gr>
	* win/TkDND_OleDND.h: Made destructors in all classes virtual.

	* win/TkDND_OleDND.cpp: Fixes for C++ warnings (which does not allow to
	pass a static string to Tcl_SetResult()).

	* CMakeLists.txt: Added support for building with msys2 & gcc under
	windows.

2017-08-25  Petasis George  <petasis@iit.demokritos.gr>
	* CMakeLists.txt: Added support for -Dwith-tcl, -Dwith-tclsh.

2017-01-25  Petasis George  <petasis@iit.demokritos.gr>
	* win\OleDND.cpp: Fixed a memory leak on the pDropTarget object in
	TkDND_RegisterDragDropObjCmd. Added calls to RevokeDragDrop on window
	destroy.

2017-01-20  Petasis George  <petasis@iit.demokritos.gr>
	* configure.in:
	* CMakeLists.txt:
	* library\tkdnd_windows.tcl:
	* win\OleDND.h: Added support fot type UniformResourceLocator under
	Windows.

2015-07-07  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.8 released.

2015-07-06  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in:
	* doc/tkDND.htm:
	* doc/tkDND.n:
	* macosx/macdnd.m:
	* unix/tkUnixSelect.c: Applied two patches from Andrew Murray,
	regarding various fixes (various typos and unused variable warnings
	under OS X).

2015-04-13  Petasis George  <petasis@iit.demokritos.gr>